apply plugin: 'com.android.application'

// NOTES
// =====
//
// * minSdk: API level 21 (Android 5) required by org.webrtc:google-webrtc:1.0.32006 (Google WebRTC).
// * targetSdk: API level 31 (Android 12) required by Google Play Store, since August 1, 2022.
//   See: https://support.google.com/googleplay/android-developer/answer/11926878
// * compileSdkVersion: Should match "targetSdk".
//
// For a complete table of all Android API levels, check https://apilevels.com/

android {
    compileSdk 31
    defaultConfig {
        applicationId "io.openvidu.openvidu_android"
        minSdk 21
        targetSdk 31
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            debuggable true
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt')
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.4.2'
    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
    implementation 'com.jakewharton:butterknife:10.2.0'
    implementation 'com.squareup.okhttp3:okhttp:4.2.0'
    implementation 'com.neovisionaries:nv-websocket-client:2.9'
    implementation 'org.webrtc:google-webrtc:1.0.32006'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test:runner:1.4.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}
